# CRPG_Demo

./: CMakeLists.txt  events.c  layer_test.c  legacy_main.c  main.c
libs/: allinone.h  manager.h  system.c  system.h
libs/headers/: enemy.h  keyboard.h  map.h  obstacle.h  player.h  print.h  screen.h  system.h
libs/sources/: enemy.c  keyboard.c  map.c  obstacle.c  player.c  print.c  screen.c  system.c
maps/: 0.map_data
